# rustdi

./: .gitignore  Cargo.toml  README.md
rustdi/: Cargo.toml
rustdi/examples/: demo.rs
rustdi/src/: container.rs  ioc.rs  lib.rs  resolve_error.rs  service.rs  traits.rs
rustdi_derive/: Cargo.toml  LICENSE-MIT
rustdi_derive/src/: lib.rs
rustdi_examples/: Cargo.toml
rustdi_examples/src/: basic.rs  main.rs  router.rs
rustdi_examples/src/common/: handlers.rs  models.rs
src/: ioc.rs  lib.rs  main.rs
