[package]
name = "rustdi"
version = "0.1.0"
authors = ["Nico Burns <nico@nicoburns.com>"]
edition = "2018"

[lib]
proc-macro = true
name = "rustdi_macro"
path = "src/lib.rs"

[[bin]]
name = "rustdi_app"
path = "src/main.rs"

[dependencies]
futures = "0.1"
syn = { version = "0.15", features = ["full", "printing", "parsing", "clone-impls", "extra-traits"] }
quote = "0.6"
typemap = "0.3.3"
proc-macro2 = "0.4.20"
